# EMMPMWorkbench

./: .gitignore  .gitmodules  ArchiveAllSources.sh  CMakeLists.txt  CodeToLatex.sh  IPHelperSDK.sh  License.txt.in  PackSources.sh  README.md  ReadMe.txt.in  ToDo.txt
Code/AIM/: CMakeLists.txt
Code/AIM/Common/: AIMImage.h  AIMLibExport.h  SourceList.cmake
Code/AIM/ImageFilters/: AIMCropGrayScaleImage.h  AIMImageFilter.h  AIMImagePadFilter.h
Code/EmMpmGui/: AxisSettingsDialog.h  CMakeLists.txt  EMMPMGraphicsView.cpp  EMMPMGraphicsView.h  EMMPMTask.cpp  EMMPMTask.h  EMMPMUserInitArea.cpp  EMMPMUserInitArea.h  EmMpmGui.cpp  EmMpmGui.h  ImageOpenDialog.h  LayersDockWidget.cpp  LayersDockWidget.h  ManualInitData.cpp  ManualInitData.h  ManualInitDataItemDelegate.h  ManualInitTableModel.cpp  ManualInitTableModel.h  PerClassItemData.cpp  PerClassItemData.h  PerClassItemDelegate.h  PerClassTableModel.cpp  PerClassTableModel.h  UserInitArea.cpp  UserInitArea.h  UserInitAreaDialog.cpp  UserInitAreaDialog.h  UserInitAreaItemDelegate.h  UserInitAreaTableModel.cpp  UserInitAreaTableModel.h  UserInitAreaWidget.cpp  UserInitAreaWidget.h  main.cpp  node.cpp  node.h  qtbox.cpp  qtbox.h  qtbox.qrc  uia.cpp  uia.h
Code/EmMpmGui/UI_Files/: AxisSettingsDialog.ui  EmMpmGui.ui  ImageOpenDialog.ui  LayersDockWidget.ui  UserInitAreaDialog.ui  UserInitAreaWidget.ui
Code/EmMpmWorkbench/: AxisSettingsDialog.cpp  CMakeLists.txt  EMMPMGraphicsView.cpp  EMMPMGraphicsView.h  EMMPMTask.cpp  EMMPMTask.h  EmMpmWorkbench.cpp  EmMpmWorkbench.h  ImageOpenDialog.cpp  LayersDockWidget.cpp  LayersDockWidget.h  ManualInitDataItemDelegate.h  ManualInitTableModel.cpp  PerClassItemData.h  PerClassTableModel.cpp  UserInitArea.cpp  UserInitArea.h  UserInitAreaDialog.h  UserInitAreaItemDelegate.h  UserInitAreaTableModel.cpp  UserInitAreaTableModel.h  UserInitAreaWidget.cpp  main.cpp
Code/EmMpmWorkbench/UI_Files/: EmMpmWorkbench.ui  UserInitAreaDialog.ui
Code/IPHelper/Application/: CMakeLists.txt  IPHelperApp.cpp  IPHelperApp.h
Code/IPHelper/Application/UI_Files/: IPHelperApp.ui
Code/IPHelper/plugins/: QImageProcessingInputFrame.cpp
Code/IPHelper/plugins/CrossCorrelation/: CMakeLists.txt  CrossCorrelationPlugin.cpp
Code/IPHelper/plugins/EMMPM/: CMakeLists.txt  EMMPMInputUI.cpp  EMMPMPlugin.cpp
Code/IPHelper/plugins/MutualInformation/: CMakeLists.txt  ImageRegistration9.cxx
Code/MIApp/: CMakeLists.txt  CompositingRenderer.cpp  CompositingRenderer.h  InitArea.cpp  InitArea.h  QMIApp.cpp  QMIApp.h
Code/MIApp/UI_Files/: QMIApp.ui
Code/MXA/: CMakeLists.txt
Code/MXA/Common/: DLLExport.h  SourceList.cmake
Code/QtSupport/: CMakeLists.txt  ImageGraphicsDelegate.cpp  ImageGraphicsDelegate.h  ProcessQueueController.cpp  ProcessQueueDialog.cpp  ProcessQueueDialog.h  ProcessQueueTask.h  QDisclosableGroupBox.cpp  QProgressLabel.cpp  QProgressLabel.h
Code/QtSupport/NotUsed/: ProcessQueueDialog.cpp
Code/QtSupport/UI_Files/: ProcessQueueDialog.ui
Documentation/: EMMPM_Workbench.tex  EmMpmGui.docx  TSWLatexianTemp_000435.aux  TSWLatexianTemp_000435.brf  TSWLatexianTemp_000435.out  TSWLatexianTemp_000435.synctex  TSWLatexianTemp_000435.tex  TSWLatexianTemp_000435.toc  doxygen.sty
License/: License.cmake
Resources/: EMMPMGuiProj.doxyfile.in  IPHelper.doxyfile.in  upload.sh.in
Resources/CPack/: OS_X_ReadMe.txt  PackageProject.cmake
Resources/cmp/Modules/: FindEMMPM.cmake
Resources/icons/icns/: EmMpmWorkbench.icns  IPHelperApp.icns
Resources/icons/icon_masters/: EmMpmGui-Master.psd  EmMpmGui.psd  IPHelperApp.psd
Resources/icons/images/: Icons.qrc
Scripts/: ArchiveAllSources.sh  CompileAll.sh  IPHelperSDK.sh  Uchic.bat
